[AUD-389] Fix weird font alignment issue (#270)

--- a/audius-client/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
+++ b/audius-client/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
@@ -51,6 +51,13 @@
   display: inline-flex;
   font-weight: var(--font-medium);
   align-items: center;
+  /**
+   * Some webkit browsers (safari) have some trouble rendering this specific
+   * font style within this particular context (due to floating point math being wonky
+   * and the text getting accidentally wrapped). This is a temporary fix.
+   * https://bugs.webkit.org/show_bug.cgi?id=217136
+   */
+  letter-spacing: 0.000001px;
 }
 
 .active .userName {
@@ -63,13 +70,6 @@
   text-decoration: underline;
   text-decoration-color: var(--primary-light-2);
 }
-
-.iconVerified {
-  height: 14px;
-  width: 14px;
-  margin-left: 4px;
-}
-
 
 .socialInfo {
   display: inline-flex;
